--- a/media/speaker-rider/index.html
+++ b/media/speaker-rider/index.html
@@ -88,7 +88,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>6 minute read</span>
+    <span>7 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -121,16 +121,20 @@
 <h3 id="intellectual-property">Intellectual Property</h3>
 <p>You may record or stream my event, but I retain ownership over the content of the talk and the right to give the talk at other events at my discretion. If you record or stream a presentation, ensure that it is captioned. Recordings cannot be paywalled (unless I give express, written permission, such as if you have paid me for a private corporate event), and I reserve the right to ask that any recording, audio or video, as well as my likeness, be taken down at any point in the future for any reason of my choosing.</p>
 <p>I can't believe I have to say this, but you absolutely may not use my photo, voice, or any piece of my presentation to mint an NFT.</p>
+<h3 id="location-policies">Location Policies</h3>
+<p>Your event <em>must</em> be held in a location that is safe for gay and transgender people to attend. This is non-negotiable. </p>
+<p>Your event <em>should</em> be held in a location that is supportive of women's reproductive rights and of all LGBTQI+ people's right to privacy and equality. I may elect to speak at events in unsupportive locations, though in such situations I am more likely to give talks about privacy and security and the importance of diversity in open source communities.</p>
 <h3 id="covid-policies">COVID Policies</h3>
-<p>Your event must require masks, verified proof of vaccination, and on-site daily check-ins (such as a temperature check at the door) for me to appear in person. Masking should be actively enforced by conference staff. I understand that some local jurisdictions within the US have made it illegal to require masks or proof of vaccination; if your event is in such a jurisdiction, I will be happy to present my talk remotely. If your event is in a place where case rates are extremely low (for example, New Zealand), this requirement is negotiable, but I will impose increased testing and isolation requirements upon myself for safety.</p>
-<p>Ideally, on-site testing should be provided, but it is not required. Personally, I will take a rapid test before flying to your event, and before entering the conference. </p>
+<p>Your event must require masks, verified proof of vaccination, and on-site daily check-ins (such as a temperature check at the door) for me to appear in person. Masking should be actively enforced by conference staff.  Ideally, on-site testing should be provided, but it is not required. </p>
+<p>I understand that some local jurisdictions within the US have made it illegal to require masks or proof of vaccination; if your event is in such a jurisdiction, I will be happy to present my talk remotely. If your event is in a place where case rates are extremely low (for example, New Zealand), this requirement is negotiable, but I will impose increased testing and isolation requirements upon myself for safety.</p>
+<p>Personally, I will take a rapid test at least once before entering the conference, and I will wear a KN-95 or better mask at all times (when inside a public area, and not eating or on stage) during my trip.</p>
 <h3 id="cancellations">Cancellations</h3>
 <p>Cancelling a speaking engagement is something I try very, very hard to avoid. That said, the ongoing global pandemic means that a cancellation is more likely than ever before. In the case of a surge, either globally or locally, as a result of a new variant or not, I reserve the right to pull out of your event for my own safety and the safety of others. In that case, I will make my best effort to offer a remote presentation. If that is not possible and it is appropriate to do so, I may suggest an alternate speaker take my slot.</p>
 <h3 id="contacting-me">Contacting Me</h3>
 <p>Want to have me speak? Cool! Reach out to me via <a href="mailto:aeva@aeva.online">email</a> with the name, dates, and website for your event, as well as any confirmed speakers and an idea of what you want me to talk about. If your event fits into the corporate events category, please also include your speaker budget.</p>
 <p>Thanks for reading!</p>
 <p>// Derived from Kat Cosgrove's Speaker's Rider. //</p>
-<p>// Original source: <a href="github.com/katcosgrove/katcosgrove/blob/main/speaking.md">github.com/katcosgrove/katcosgrove/blob/main/speaking.md</a> //</p>
+<p>// Original source: <a href="https://github.com/katcosgrove/katcosgrove/blob/main/speaking.md">github.com/katcosgrove/katcosgrove/blob/main/speaking.md</a> //</p>
 <p>// Licensed under the Creative Commons Attribution-ShareAlike 4.0 International Public License //</p>
 
     </div>
