--- a/media/index.html
+++ b/media/index.html
@@ -106,20 +106,19 @@
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td>keynote</td></tr>
-<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11QaM">keynote</a></td></tr>
-<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Njh">GitBOM: repurposing Git's graph for supply chain security</a></td></tr>
-<tr><td>6/23</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Nsq">The Evolution of Codes of Conduct in Open Source</a></td></tr>
-<tr><td>8/11</td><td>TBA</td><td>TBA</td></tr>
+<tr><td>7/30</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>9/13</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>10/24</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>11/4</td><td>TBA</td><td>TBA</td></tr>
-<tr><td>?</td><td>Podcast #2</td><td>TBA</td></tr>
 </tbody></table>
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2022-1">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>5/25</td><td><a href="https://swampup.jfrog.com/agenda/">SwampUp</a></td><td>Securing the DevOps Pipeline</td></tr>
+<tr><td>6/23</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Nsq">The Evolution of Codes of Conduct in Open Source</a></td></tr>
+<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11QaM">keynote</a></td></tr>
+<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Njh">GitBOM: repurposing Git's graph for supply chain security</a></td></tr>
+<tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td><a href="https://youtu.be/DJci2G227KY">Trust: Visible and Invisible</a></td></tr>
+<tr><td>5/25</td><td><a href="https://swampup.jfrog.com/agenda/">SwampUp</a></td><td>Live panel: &quot;Securing the DevOps Pipeline&quot;</td></tr>
 <tr><td>5/16</td><td><a href="https://sched.co/zsUV">Cloud Native Security Conference</a></td><td><a href="https://youtu.be/2SSkNLWL4UM">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a></td></tr>
 <tr><td>5/5</td><td>O'Reilly SuperStream</td><td><a href="https://www.oreilly.com/products/superstreams.htm">https://www.oreilly.com/products/superstreams.html</a></td></tr>
 <tr><td>4/6</td><td>The CTO Advisor: GitBOM</td><td><a href="https://thectoadvisor.com/gitbom-podcast/">https://thectoadvisor.com/gitbom-podcast/</a></td></tr>
