--- a/media/index.html
+++ b/media/index.html
@@ -106,7 +106,7 @@
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>7/30</td><td>TBA</td><td>TBA</td></tr>
+<tr><td>7/30</td><td><a href="https://www.socallinuxexpo.org">SCALE</a></td><td><a href="https://www.socallinuxexpo.org/scale/19x/speakers/aeva-black">Keynote</a></td></tr>
 <tr><td>9/13</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>10/24</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>11/4</td><td>TBA</td><td>TBA</td></tr>
