--- a/media/index.html
+++ b/media/index.html
@@ -107,9 +107,9 @@
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
 <tr><td>7/30</td><td><a href="https://www.socallinuxexpo.org">SCALE</a></td><td><a href="https://www.socallinuxexpo.org/scale/19x/speakers/aeva-black">Keynote</a></td></tr>
-<tr><td>9/13</td><td>TBA</td><td>TBA</td></tr>
-<tr><td>10/24</td><td>TBA</td><td>TBA</td></tr>
-<tr><td>11/4</td><td>TBA</td><td>TBA</td></tr>
+<tr><td>9/13</td><td><a href="https://events.linuxfoundation.org/open-source-summit-europe/">Open Source Summit EU</a></td><td><a href="https://osseu2022.sched.com/event/a859fc305e942b2c221e47877af2ad38">Why We Need Codes of Conduct -- and Why They're Not Enough</a></td></tr>
+<tr><td>10/24</td><td><a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/">KubeCon NA</a></td><td>TBA</td></tr>
+<tr><td>11/4</td><td><a href="https://seagl.org/">SeaGL</a></td><td>TBA</td></tr>
 </tbody></table>
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2022-1">2022</h2>
