--- a/media/index.html
+++ b/media/index.html
@@ -88,7 +88,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>6 minute read</span>
+    <span>7 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -114,6 +114,7 @@
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2022-1">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
+<tr><td>7/13</td><td><a href="https://thenewstack.io">The New Stack</a></td><td>Interview: <a href="https://thenewstack.io/what-can-the-tech-community-do-to-protect-its-trans-members/">What Can the Tech Community Do to Protect Its Trans Members?</a></td></tr>
 <tr><td>6/23</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Nsq">The Evolution of Codes of Conduct in Open Source</a></td></tr>
 <tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11QaM">keynote</a></td></tr>
 <tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Njh">GitBOM: repurposing Git's graph for supply chain security</a></td></tr>
