add scale keynote, fix formatting
Signed-off-by: Aeva Black <806320+AevaOnline@users.noreply.github.com>

--- a/media/index.html
+++ b/media/index.html
@@ -106,7 +106,6 @@
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>7/30</td><td><a href="https://www.socallinuxexpo.org">SCALE</a></td><td><a href="https://www.socallinuxexpo.org/scale/19x/speakers/aeva-black">Keynote</a></td></tr>
 <tr><td>9/13</td><td><a href="https://events.linuxfoundation.org/open-source-summit-europe/">Open Source Summit EU</a></td><td><a href="https://osseu2022.sched.com/event/a859fc305e942b2c221e47877af2ad38">Why We Need Codes of Conduct -- and Why They're Not Enough</a></td></tr>
 <tr><td>10/24</td><td><a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/">KubeCon NA</a></td><td>TBA</td></tr>
 <tr><td>11/4</td><td><a href="https://seagl.org/">SeaGL</a></td><td>TBA</td></tr>
@@ -114,11 +113,12 @@
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2022-1">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
+<tr><td>7/30</td><td><a href="https://www.socallinuxexpo.org">SCALE</a></td><td>Keynote: <a href="https://youtu.be/j38yNc2wHmY?t=858">Victims of our Success: How Open Source Vulnerabilities became a National Security Risk</a></td></tr>
 <tr><td>7/13</td><td><a href="https://thenewstack.io">The New Stack</a></td><td>Interview: <a href="https://thenewstack.io/what-can-the-tech-community-do-to-protect-its-trans-members/">What Can the Tech Community Do to Protect Its Trans Members?</a></td></tr>
 <tr><td>6/23</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Nsq">The Evolution of Codes of Conduct in Open Source</a></td></tr>
-<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11QaM">keynote</a></td></tr>
+<tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td>Keynote: <a href="https://sched.co/11QaM">A Call To Action on Trans Rights</a></td></tr>
 <tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Njh">GitBOM: repurposing Git's graph for supply chain security</a></td></tr>
-<tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td><a href="https://youtu.be/DJci2G227KY">Trust: Visible and Invisible</a></td></tr>
+<tr><td>6/7</td><td><a href="https://upstream.live/">Tidelift's Upstream</a></td><td><a href="https://youtu.be/DJci2G227KY">Trust: Visible and Invisible</a></td></tr>
 <tr><td>5/25</td><td><a href="https://swampup.jfrog.com/agenda/">SwampUp</a></td><td>Live panel: &quot;Securing the DevOps Pipeline&quot;</td></tr>
 <tr><td>5/16</td><td><a href="https://sched.co/zsUV">Cloud Native Security Conference</a></td><td><a href="https://youtu.be/2SSkNLWL4UM">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a></td></tr>
 <tr><td>5/5</td><td>O'Reilly SuperStream</td><td><a href="https://www.oreilly.com/products/superstreams.htm">https://www.oreilly.com/products/superstreams.html</a></td></tr>
