add rel=me link for mastodon

--- a/about/index.html
+++ b/about/index.html
@@ -110,6 +110,7 @@
 <p>PRONOUN: they/them</p>
 <p>PREFIX: mystery</p>
 <p>LAST KNOWN LOCATION: seattle, wa</p>
+<p><a rel="me" href="https://tech.lgbt/@aeva"></a></p>
 
     </div>
 
