update about and contact pages, add new pfp
Signed-off-by: Aeva Black <806320+AevaOnline@users.noreply.github.com>

--- a/about/index.html
+++ b/about/index.html
@@ -99,18 +99,17 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p><img src="profile_300.jpeg"
- alt="Profile photo of a non-binary person with olive skin, sporting purple chin-length hair and a side shave, with gold-rimmed glasses. The background is grey with a highlighting or halo effect. The person is wearing a charcoal colored suit jacket, burgundy silk blouse, and a gold chain necklace."
+      <p><img src="moto_profile.png"
+ alt="A photo of a non-binary person with large breasts, olive skin, purple hair and a side shave, who is wearing dark glasses and a leather jacket and standing in front of a red and white triumph bonneville."
  style="float: right;" width="250" /></p>
-<p>SUBJECT NAME: aeva black</p>
-<p>SUBJECT AGE: about 40</p>
+<p>NAME: aeva black</p>
+<p>AGE: about 40</p>
 <p>HAIR COLOR: changes frequently</p>
 <p>EYE COLOR: changes infrequently</p>
 <p>GENDER: irrelevant</p>
 <p>PRONOUN: they/them</p>
 <p>PREFIX: mystery</p>
-<p>LAST KNOWN LOCATION: seattle, wa</p>
-<p><a rel="me" href="https://tech.lgbt/@aeva"></a></p>
+<p>LOCATION: seattle, wa</p>
 
     </div>
 
