--- a/contact/index.html
+++ b/contact/index.html
@@ -80,7 +80,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <h1 itemprop="headline">How to reach me, here and elsewhere</h1>
+        <h1 itemprop="headline">How to reach me on the interwebs</h1>
         <span class="muted">
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
@@ -99,26 +99,11 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p><strong>On social media</strong>, you can find me on <a href="https://twitter.com/aevavoom">twitter</a>, <a href="https://www.linkedin.com/in/aevaonline/">linkedin</a>, <a href="https://github.com/AevaOnline">github</a>, and occasionally <a href="https://fosstodon.org/@aeva">mastodon</a>.</p>
-<p><strong>By email</strong>, you can:</p>
-<ul>
-<li>reach me directly: aeva <strong>at</strong> aeva dot online</li>
-<li>reach me securely: aeva dot online <strong>at</strong> protonmail dot ch</li>
-<li>reach me seriously: aeva dot black <strong>at</strong> microsoft dot com</li>
-</ul>
-<p>If you know my nicks, <strong>DM me on</strong>:</p>
-<ul>
-<li>several Slacks</li>
-<li>a diaspora of Discords</li>
-<li>libera and oftc IRC networks</li>
-</ul>
-<p>Yes, I use Signal; no, I'm not putting my # up here.</p>
-<p>You can also:</p>
-<ul>
-<li>encrypt things to <a href="/static/gpg">my GPG key</a></li>
-<li>add <a href="/static/ssh">my SSH Public key</a> to your system, so I can write on your wall</li>
-</ul>
-<p>I don't <a href="https://xkcd.com/1254/">check my voicemail</a>, so if all else fails, <a href="https://tools.ietf.org/html/rfc1149">try using RFC 1149</a>.</p>
+      <p>You can find me on <strong>mastodon</strong> at <a rel="me" href="https://tech.lgbt/@aeva">tech.lgbt</a> and <a rel="me" href="https://infosec.exchange/@aeva">infosec.exchange</a>. I've mostly migrated away from <a href="https://twitter.com/aevavoom">twitter</a> at this point.</p>
+<p>For <strong>secure instant messaging</strong>, reach me on matrix at <a rel="me" href="https://matrix.to/@aeva.online:matrix.org#/@aeva.online:matrix.org">@aeva.online:matrix.org</a>. Yes, I'm on Signal too.</p>
+<p><strong>For email</strong>, please contact me at either <em>aeva at aeva dot online</em> or <em>aeva dot black at microsoft</em>.</p>
+<p>I'm also on <a href="https://github.com/AevaOnline">github</a> and <a href="https://www.linkedin.com/in/aevaonline/">linkedin</a>.</p>
+<p>Messages sent by avian carrier are preferable to <a href="https://xkcd.com/1254/">voicemail</a>.</p>
 
     </div>
 
