update after way too long

--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -88,7 +88,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>2 minute read</span>
+    <span>1 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -99,25 +99,12 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>Hi! I'm Aeva Black, and you have found a page with several bios!</p>
-<p>Like everyone who has such a page, this one is probably out of date already. If
-today is more than a year since <strong>February 13, 2022</strong>, and you came here to get
-a blurb for, say, a conference brochure or by-line, please
-<a href="../contact/">email me</a> instead and ask for something more recent.</p>
-<p>If you're just looking for a headshot, please scroll to the bottom.</p>
-<p>Thanks!</p>
+      <p>Aeva Black is a queer and non-binary hacker. After nearly twenty five years of
+contributing to and leading open source projects while working in the private
+sector, Aeva now leads open source security for the U.S. Cybersecurity and
+Infrastructure Security Agency.</p>
 <hr />
-<h2 id="short"><strong>Short</strong></h2>
-<p>Aeva Black is an incurably queer geek and veteran of the first dot-com bust.
-Roaming between startups and Big Tech with ease, Aeva currently works in
-Azure's Office of the CTO and serves the open source community as the Secretary
-of the Board for the Open Source Initiative and as Vice Chair on the OpenSSF's
-Technical Advisory Council.</p>
-<p>Aeva is a frequent keynote speaker at conferences around the world, advocating
-to make  technology more ethical and inclusive while digging into topics
-ranging from open source strategy and community management, to databases, to
-bare metal orchestration and security. </p>
-<hr />
+<p>Please contact Aeva to request a longer biography or a copy of their CV.</p>
 <h2 id="head-shots">Head shots</h2>
 <p>(1500 x 1500) 
 <img src="../profile.jpeg" width="600"></p>
