--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <h1 itemprop="headline">... DOSSIER ...</h1>
+        <h1 itemprop="headline"></h1>
         <span class="muted">
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
@@ -101,15 +101,19 @@
     <div itemprop="articleBody">
       <p><img src="moto_profile.png"
  alt="A photo of a non-binary person with large breasts, olive skin, purple hair and a side shave, who is wearing dark glasses and a leather jacket and standing in front of a red and white triumph bonneville."
- style="float: right;" width="250" /></p>
+ style="float: right;" width="300" /></p>
 <p>NAME: aeva black</p>
 <p>AGE: about 40</p>
 <p>HAIR COLOR: changes frequently</p>
 <p>EYE COLOR: changes infrequently</p>
 <p>GENDER: irrelevant</p>
 <p>PRONOUN: they/them</p>
-<p>PREFIX: mystery</p>
 <p>LOCATION: seattle, wa</p>
+<hr />
+<p>Aeva Black is a queer and non-binary hacker. After nearly twenty five years of
+contributing to and leading open source projects while working in the private
+sector, Aeva now leads Open Source Security for the U.S. Cybersecurity and
+Infrastructure Security Agency.</p>
 
     </div>
 
