--- a/about/index.html
+++ b/about/index.html
@@ -110,10 +110,15 @@
 <p>PRONOUN: they/them</p>
 <p>LOCATION: seattle, wa</p>
 <hr />
-<p>Aeva Black is a queer and non-binary hacker. After nearly twenty five years of
-contributing to and leading open source projects while working in the private
-sector, Aeva now leads Open Source Security for the U.S. Cybersecurity and
-Infrastructure Security Agency.</p>
+<p>Aeva Black is CISA’s Open Source Security Lead. In their previous role, Aeva
+led open source security strategy in Microsoft Azure’s Office of the CTO, held
+the Vice Chair role on the OpenSSF’s Technical Advisory Committee, and served
+on the board of the Open Source Initiative. Throughout the past twenty years,
+they have held leading roles in several large open source projects, led
+development teams at HP, IBM, and at a couple startups, and been a regular
+speaker at global open source conferences. Aeva is also an outspoken advocate
+for LGBTQ+ rights and a regular volunteer at community organizations around
+Seattle, where they have lived since 2012.</p>
 
     </div>
 
