--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -99,10 +99,12 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>Aeva Black is a queer and non-binary hacker. After nearly twenty five years of
-contributing to and leading open source projects while working in the private
-sector, Aeva now leads open source security for the U.S. Cybersecurity and
-Infrastructure Security Agency.</p>
+      <p>Aeva Black is an open source hacker, advocate, and international public speaker
+with over 20 years of experience building digital infrastructure and leading
+open source projects at technology companies. She is the Section Chief for Open
+Source Security at CISA, and serves as the Secretary of the Board of the Open
+Source Initiative. In her spare time, Aeva likes to ride motorcycles and support
+her local LGBTQ+ community.</p>
 <hr />
 <p>Please contact Aeva to request a longer biography or a copy of their CV.</p>
 <h2 id="head-shots">Head shots</h2>
