--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -103,8 +103,8 @@
 with over 20 years of experience building digital infrastructure and leading
 open source projects at technology companies. She is the Section Chief for Open
 Source Security at CISA, and serves as the Secretary of the Board of the Open
-Source Initiative. In her spare time, Aeva likes to ride motorcycles and support
-her local LGBTQ+ community.</p>
+Source Initiative. In her spare time, Aeva spends her time riding motorcycles
+and supporting her local LGBTQ+ community.</p>
 <hr />
 <p>Please contact Aeva to request a longer biography or a copy of their CV.</p>
 <h2 id="head-shots">Head shots</h2>
