--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -100,11 +100,11 @@
     </header>
     <div itemprop="articleBody">
       <p>Aeva Black is an open source hacker, advocate, and international public speaker
-with over 20 years of experience building digital infrastructure and leading
-open source projects at technology companies. She is the Section Chief for Open
-Source Security at CISA, and serves as the Secretary of the Board of the Open
-Source Initiative. Aeva spends her spare time riding motorcycles and supporting
-her local LGBTQ+ community.</p>
+with 25 years of experience building digital infrastructure and leading open
+source projects at successful technology companies. They are the Section Chief
+for Open Source Software Security at CISA, and serve as the Secretary of the
+Board of the Open Source Initiative. Aeva spends their spare time riding
+motorcycles and supporting local LGBTQ+ community.</p>
 <hr />
 <p>Please contact Aeva to request a longer biography or a copy of their CV.</p>
 <h2 id="head-shots">Head shots</h2>
