august update fix

--- a/media/index.html
+++ b/media/index.html
@@ -121,7 +121,7 @@ A: Lots of them. See the table below :)</p>
 <h2 id="2024">2024</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
 <tr><td>7/29</td><td><a href="https://www.cisa.gov/news-events/news/open-source-artificial-intelligence-dont-forget-lessons-open-source-software">CISA Blog on OSS AI</a></td><td>&quot;With Open Source Artificial Intelligence, Don’t Forget the Lessons of Open Source Software&quot;</td></tr>
-<tr><td>7/11</td><td>What's Next for Open Source</td><td>unrecorded opening remarks</td></tr>
+<tr><td>7/11</td><td><a href="https://events.linuxfoundation.org/whatsnext4oss/">What's Next for Open Source</a></td><td>unrecorded opening remarks</td></tr>
 <tr><td>7/9</td><td><a href="https://www.un.org/techenvoy/content/ospos-good-2024">United Nation's OSPO-for-Good Summit</a></td><td><a href="https://webtv.un.org/en/asset/k1u/k1uvv0xd6d?kalturaStartTime=8958">Panel: Open Source in Government</a></td></tr>
 <tr><td>7/8</td><td><a href="https://www.cisa.gov/news-events/news/continued-progress-towards-secure-open-source-ecosystem">CISA Blog on OSS</a></td><td>Continued Progress Towards a Secure Open Source Ecosystem</td></tr>
 <tr><td>6/29</td><td>ToorCamp 2024</td><td>Presentation: Hyperfixation for fun and profit (and motorcycles!)</td></tr>
