update bios and new build env

--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -93,12 +93,15 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>Aeva Black is an open source hacker, advocate, and international public speaker
-with 25 years of experience building digital infrastructure and leading open
-source projects at successful technology companies. They are the Section Chief
-for Open Source Software Security at CISA, and serve as the Secretary of the
-Board of the Open Source Initiative. Aeva spends their spare time riding
-motorcycles and supporting local LGBTQ+ community.</p>
+      <p>Aeva Black is a non-binary hacker, open source advocate, public speaker, and
+serves as the Section Chief for Open Source Software Security at the
+Cybersecurity and Infrastructure Security Agency (CISA).  They previously held
+roles at several non-profits -- including the Open Source Initiative, the Open
+Source Security Foundation, and the OpenStack Foundation -- and led development
+teams at a few companies -- including Hewlett Packard Enterprise, IBM, and
+Microsoft.</p>
+<p>Aeva spends their spare time tending a small garden, riding motorcycles, and
+supporting local LGBTQ+ community in Seattle.</p>
 <hr />
 <p>Please contact Aeva to request a longer biography or a copy of their CV.</p>
 <h2 id="head-shots">Head shots</h2>
