--- a/about/index.html
+++ b/about/index.html
@@ -104,15 +104,15 @@
 <p>PRONOUN: they/them</p>
 <p>LOCATION: seattle, wa</p>
 <hr />
-<p>Aeva Black is CISA’s Open Source Security Lead. In their previous role, Aeva
-led open source security strategy in Microsoft Azure’s Office of the CTO, held
-the Vice Chair role on the OpenSSF’s Technical Advisory Committee, and served
-on the board of the Open Source Initiative. Throughout the past twenty years,
-they have held leading roles in several large open source projects, led
-development teams at HP, IBM, and at a couple startups, and been a regular
-speaker at global open source conferences. Aeva is also an outspoken advocate
-for LGBTQ+ rights and a regular volunteer at community organizations around
-Seattle, where they have lived since 2012.</p>
+<p>Aeva Black is a non-binary hacker, open source advocate, public speaker, and
+serves as the Section Chief for Open Source Software Security at the
+Cybersecurity and Infrastructure Security Agency (CISA).  They previously held
+roles at several non-profits -- including the Open Source Initiative, the Open
+Source Security Foundation, and the OpenStack Foundation -- and led development
+teams at a few companies -- including Hewlett Packard Enterprise, IBM, and
+Microsoft.</p>
+<p>Aeva spends their spare time tending a small garden, riding motorcycles, and
+supporting local LGBTQ+ community in Seattle.</p>
 
     </div>
 
