updating media list 2024-11-25

--- a/about/index.html
+++ b/about/index.html
@@ -104,8 +104,8 @@
 <p>PRONOUN: they/them</p>
 <p>LOCATION: seattle, wa</p>
 <hr />
-<p>Aeva Black is a non-binary hacker, open source advocate, public speaker, and
-serves as the Section Chief for Open Source Software Security at the
+<p>Aeva Black is a non-binary hacker, open source advocate, and public speaker who
+currently serves as the Section Chief for Open Source Software Security at the
 Cybersecurity and Infrastructure Security Agency (CISA).  They previously held
 roles at several non-profits -- including the Open Source Initiative, the Open
 Source Security Foundation, and the OpenStack Foundation -- and led development
