--- a/media/index.html
+++ b/media/index.html
@@ -93,12 +93,12 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>Q: Aeva, are you available to speak at <em>Title Of Cool Event</em>?
-A: Probably. Please review <a href="speaker-rider">my speaker's rider</a>. My contact info is available on that page.</p>
-<p>Q: Aeva, do you have a bio or headshot we can use?
-A: Yes, on <a href="/about/bios">this unlisted page</a>.</p>
-<p>Q: Aeva, do you have recordings of past talks for us to review?
-A: Lots of them. See the table below :)</p>
+      <p><strong>Q</strong>: Aeva, are you available to speak at ______ ? <br>
+<strong>A</strong>: Probably. Please review <a href="speaker-rider">my speaker's rider</a>. My contact info is available on that page.</p>
+<p><strong>Q</strong>: Aeva, do you have a bio or headshot we can use? <br>
+<strong>A</strong>: Yes, which you can find on <a href="/about/bios">this page</a>.</p>
+<p><strong>Q</strong>: Aeva, do you have recordings of past talks for us to review? <br>
+<strong>A</strong>: Lots of them. See the table below :)</p>
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
 </tbody></table>
@@ -205,8 +205,7 @@ A: Lots of them. See the table below :)</p>
 <tr><td>20 May</td><td>OpenStack Summit</td><td><a href="https://www.openstack.org/summit/vancouver-2018/summit-schedule/events/21013/so-many-features-so-little-time">So Many Features, So Little Time</a></td></tr>
 </tbody></table>
 <h1 id="pre-history">Pre-History</h1>
-<p><em>All prior content was published under my previous name and gender.</em><br>
-<em>Details available by respectful request.</em></p>
+<p><i>All prior content published under a different name. Details available by respectful request.</i></p>
 <p><strong>2011 - 2017</strong>: Many talks about OpenStack and Bare Metal Clouds at events around the world.</p>
 <p><strong>2005 - 2011</strong>: Semi-annual talks about MySQL Replication and Scalability.</p>
 
