--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -93,13 +93,13 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>Aeva Black is a non-binary hacker, open source advocate, public speaker, and
-serves as the Section Chief for Open Source Software Security at the
-Cybersecurity and Infrastructure Security Agency (CISA).  They previously held
-roles at several non-profits -- including the Open Source Initiative, the Open
-Source Security Foundation, and the OpenStack Foundation -- and led development
-teams at a few companies -- including Hewlett Packard Enterprise, IBM, and
-Microsoft.</p>
+      <p>Aeva Black is a non-binary hacker, public speaker, and open source software
+developer, who currently serves as the Section Chief for Open Source Software
+Security at the U.S. Cybersecurity and Infrastructure Security Agency (CISA).
+They previously held roles at several non-profits -- including the Open Source
+Initiative, the Open Source Security Foundation, and the OpenStack Foundation
+-- and led development teams at a few companies -- including Microsoft, Hewlett
+Packard Enterprise, and IBM.</p>
 <p>Aeva spends their spare time tending a small garden, riding motorcycles, and
 supporting local LGBTQ+ community in Seattle.</p>
 <hr />
