--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -206,7 +206,7 @@
             <p>Use with permission.</p>
 <p>Choose your own adventure: <strong>Hacker</strong> or <strong>Executive</strong>?</p>
 <h1 id="hacker">Hacker</h1>
-<img src="moto_profile.png" width="200" style="float: right;">
+<img src="/about/moto_profile.png" width="200" style="float: right;">
 Aeva Black is a non-binary hacker, public speaker, and open source software
 developer, who currently serves as the Section Chief for Open Source Software
 Security at the U.S. Cybersecurity and Infrastructure Security Agency (CISA).
@@ -215,7 +215,7 @@ Initiative, the Open Source Security Foundation, and the OpenStack Foundation
 -- and led development teams at a few companies -- including Microsoft, Hewlett
 Packard Enterprise, and IBM.
 <h1 id="executive">Executive</h1>
-<img src="profile_500.jpeg" width="200" style="float: right;">
+<img src="/about/profile_500.jpeg" width="200" style="float: right;">
 Aeva Black brings a wealth of knowledge from both the private sector and
 government. They are an international thought leader on open source security,
 with over 25 years of experience building digital infrastructure and leading
